[package]
name = "petronel-graphql"
version = "0.1.0"
authors = ["Walfie <walfington@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
chrono = { version = "0.4.11", features = ["serde"] }
circular-queue = "0.2.4"
dashmap = "4.0.0-rc2"
futures = "0.3.5"
hyper = "0.13.5"
hyper-tls = "0.4.1"
once_cell = "1.3.1"
parking_lot = "0.10.2"
pin-project-lite = "0.1.5"
regex = "1.3.7"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.52"
slog = "2.5.2"
slog-async = "2.5.0"
slog-json = "2.3.0"
slog-term = "2.5.0"
string_cache = "0.8.0"
structopt = "0.3.14"
thiserror = "1.0.16"
twitter-stream = "0.10.0-alpha.6"

[dependencies.tokio]
version = "0.2.21"
features = ["macros", "sync", "time", "stream", "parking_lot", "rt-core"]

[dev-dependencies]
tokio-test = "0.2.1"
